# procedural-haskell-sample-code

./: .gitignore  LICENSE  README.md  cabal.project  stack.yaml
control/: Main00.hs  Main01.hs  control-sample.cabal
lib/: Procedural.hs  procedural.cabal
reference/: Main00.hs  Main01.hs  Main02.hs  Main03.hs  reference-sample.cabal
samples/kuku/: Main00.hs  Main01.hs  Main02.hs  kuku.cabal
samples/prime/: Main00.hs  Main01.hs  Main02.hs  bench.hs  prime.cabal
st/: Main00.hs  Main01.hs  Main02.hs  Main03.hs  st-sample.cabal
