name:                procedural
version:             0.1.0.0
license:             BSD3
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
copyright:           2018 Kazuki Okamoto
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Procedural
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wmonomorphism-restriction
                       -Wimplicit-prelude
                       -Wmissing-local-signatures
                       -Wmissing-exported-signatures
                       -Wmissing-import-lists
                       -Wmissing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wno-implicit-prelude
  build-depends:       base
                     , mtl
  default-language:    Haskell2010
