name:                prime
version:             0.1.0.0
license:             BSD3
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
copyright:           2018 Kazuki Okamoto
build-type:          Simple
cabal-version:       >=1.10

executable prime00
  hs-source-dirs:      .
  main-is:             Main00.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wmonomorphism-restriction
                       -Wimplicit-prelude
                       -Wmissing-local-signatures
                       -Wmissing-exported-signatures
                       -Wmissing-import-lists
                       -Wmissing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wno-implicit-prelude
  build-depends:       base
                     , vector
  default-language:    Haskell2010

executable prime01
  hs-source-dirs:      .
  main-is:             Main01.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wmonomorphism-restriction
                       -Wimplicit-prelude
                       -Wmissing-local-signatures
                       -Wmissing-exported-signatures
                       -Wmissing-import-lists
                       -Wmissing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wno-implicit-prelude
  build-depends:       base
                     , vector
  default-language:    Haskell2010

executable prime02
  hs-source-dirs:      .
  main-is:             Main02.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wmonomorphism-restriction
                       -Wimplicit-prelude
                       -Wmissing-local-signatures
                       -Wmissing-exported-signatures
                       -Wmissing-import-lists
                       -Wmissing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wno-implicit-prelude
  build-depends:       base
  default-language:    Haskell2010

executable bench
  hs-source-dirs:      .
  main-is:             bench.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wmonomorphism-restriction
                       -Wimplicit-prelude
                       -Wmissing-local-signatures
                       -Wmissing-exported-signatures
                       -Wmissing-import-lists
                       -Wmissing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wno-implicit-prelude
  build-depends:       base
                     , vector
                     , criterion
  default-language:    Haskell2010
